--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "html2canvas": "^1.0.0-rc.7",
+    "vue": "^2.6.11",
+    "vue-material-design-icons": "^4.11.0",
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.4.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +23,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jspdf-html2canvas": "^1.4.9",
     "vue-template-compiler": "^2.6.11"
   }
 }
